--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 Django==4.2.3
 djangorestframework==3.14.0
-Pillow==10.0.0
+drf_spectacular==0.26.4
 django-cors-headers==4.1.0
 psycopg2==2.9.6
+Pillow==10.0.0
